--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
+    "react-id-swiper": "^4.0.0",
     "react-scripts": "3.4.3",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.3.1"
+    "semantic-ui-react": "^1.3.1",
+    "swiper": "^6.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
