--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-card-scroll": "^2.2.4",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-id-swiper": "^4.0.0",
+    "react-random-image": "^1.0.3",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.1",
-    "swiper": "^6.4.5"
+    "swiper": "^6.5.8"
   },
   "scripts": {
     "start": "react-scripts start",
