--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^8.6.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-card-scroll": "^2.2.4",
     "react-dom": "^16.13.1",
+    "react-horizontal-scrolling-menu": "^0.7.10",
     "react-icons": "^4.1.0",
     "react-id-swiper": "^4.0.0",
     "react-random-image": "^1.0.3",
@@ -17,6 +19,7 @@
     "react-scroll": "^1.8.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.1",
+    "serve": "^11.3.2",
     "swiper": "^6.5.8"
   },
   "scripts": {
