--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-random-image": "^1.0.3",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.2",
-    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^1.3.1",
     "serve": "^11.3.2",
     "swiper": "^6.5.8"
