--- a/package.json
+++ b/package.json
@@ -3,24 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^8.6.2",
-    "node-sass": "^4.14.1",
+    "gsap": "^3.9.1",
+    "pkg.json": "^2.0.1",
+    "pure-react-carousel": "^1.28.1",
     "react": "^16.13.1",
-    "react-card-scroll": "^2.2.4",
     "react-dom": "^16.13.1",
-    "react-horizontal-scrolling-menu": "^0.7.10",
-    "react-icons": "^4.1.0",
-    "react-id-swiper": "^4.0.0",
-    "react-random-image": "^1.0.3",
-    "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.2",
+    "react-scripts": "^5.0.0",
     "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
-    "semantic-ui-react": "^1.3.1",
-    "serve": "^11.3.2",
-    "swiper": "^6.5.8"
+    "semantic-ui-react": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
