--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "pure-react-carousel": "^1.28.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^2.1.3",
+    "react-scroll": "^1.8.8",
+    "react-svg": "^15.1.15",
     "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^1.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
