--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "gsap": "^3.9.1",
     "pkg.json": "^2.0.1",
     "pure-react-carousel": "^1.28.1",
+    "qrcode": "^1.5.1",
+    "qrious": "^4.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.8",
     "react-svg": "^15.1.15",
     "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
-    "semantic-ui-react": "^1.3.1"
+    "semantic-ui-react": "^1.3.1",
+    "swiper": "^8.4.5"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
